--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -1,5 +1,5 @@
 .navi-container {
-  max-width: 1520px;
+  /* max-width: 1520px; removed as per mentor */
   width: 90%;
   margin: 0 auto;
   position: relative;
@@ -12,7 +12,7 @@ navi-subcontainer {
 
 
 .navi-component {
-  max-width: 1520px;
+  /* max-width: 1520px; removed as per mentor */
   margin: 0 auto;
   border-radius: 100px;
   background: white;
