--- a/css/components/nav-sub-menu.css
+++ b/css/components/nav-sub-menu.css
@@ -141,7 +141,7 @@
 /* SDA */
 
 .nav-sub-menu-title.sda {
-    background: rgba(255, 225, 214, .8) !important; 
+    background: rgba(255, 225, 214, .7) !important; 
 }
 
 .nav-sub-menu-title.sda > p {
